--- a/remote_app_shell/src/app/app.component.html
+++ b/remote_app_shell/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <ul>
     <li><a routerLink="/">Clear</a></li>
-    <li><a routerLink="/mfe1">Micro-frontend 1</a></li>
+    <li><a routerLink="/mfe1/feature">Micro-frontend 1</a></li>
 </ul>
 
 <router-outlet></router-outlet>
