--- a/remote_app_shell/src/app/app.component.html
+++ b/remote_app_shell/src/app/app.component.html
@@ -3,6 +3,7 @@
 <ul>
     <li><a routerLink="/">Clear</a></li>
     <li><a routerLink="/mfe1/feature">Micro-frontend 1</a></li>
+    <li><a routerLink="/mfe2/feature">Micro-frontend 2</a></li>
 </ul>
 
 <router-outlet></router-outlet>
